--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,23 @@
 body {
-    background: cornsilk;
+	background: cornsilk;
+	margin: 0;
+}
+
+header {
+	padding: 10px 5px;
+	background: rgb(103, 160, 117);
+}
+
+header span {
+	font-weight: bold;
+	padding: 5px;
+}
+
+
+body.offline {
+	background: gray;
+}
+
+body.offline header {
+	background: darkgray;
 }
